# nicam_kokkos_microphysics

./: .gitignore  CMakeLists.txt  LICENSE  README.md  test.cpp
config/: a64fx.cmake  archi_flags.cmake
include/: data_io.h  dumpio.h  mod_debug.h  mod_driver.h  mod_mp_driver.h  mod_mp_nsw6.h  mod_precip_transport.h  mod_satadjust.h  mod_thrmdyn.h  mod_vadv1d.h  ndarray.h  problem_size.h  problemsize.h
run/data/: README.md
run/ref_verify/: README.md
src/: Makefile  Makefile.cx  data_io.cpp  dumpio.cpp  main.cpp  mod_debug.cpp  mod_driver.cpp  mod_mp_driver.cpp  mod_mp_nsw6.cpp  mod_precip_transport.cpp  mod_satadjust.cpp  mod_thrmdyn.cpp  mod_vadv1d.cpp  problemsize.cpp
